# OrthoClassifier

./: README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  train.py
.dvc/: config
Inference/: __init__.py
dvc_plots/: index.html
dvclive/: .gitignore
models/: .gitignore  resnet18.pt.dvc
src/compositeimage/: Classifier.py  TemperatureScaling.py  __init__.py  config.py  downloadnewmodel.py  duplicate.py  model.py  train.py
template/: index.html  predict.html
tests/: __init__.py
