[project]
name = "compositeimage"
version = "0.1.0"
description = "The project aims to develop a cnn classifier using pretrained ResNet as backbone. The main aim is to classify the images and make a composite image."
authors = [
    {name = "Cyril Saju and Sandra Jarvas"}
]
license = {text = "None"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc (>=3.61.0,<4.0.0)",
    "dvclive (>=3.48.3,<4.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "torchaudio (>=2.5.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "torchinfo (>=1.8.0,<2.0.0)",
    "timm (>=1.0.19,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)"
]

packages = [
  { include = "compositeimage", from = "src" }
]



[[tool.poetry.source]]
name     = "pytorch-cu121"
url      = "https://download.pytorch.org/whl/cu121"
priority = "explicit"



[tool.poetry.dependencies]
torch = {source = "pytorch-cu121"}
torchvision = {source = "pytorch-cu121"}
torchaudio = {source = "pytorch-cu121"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
