[tool.poetry]
name = "compositeimage"
version = "0.1.0"
description = "CNN classifier using pretrained ResNet to classify and create composite image."
authors = [
    "Cyril Saju <csaju53@gmail.com>",
    "Sandra Jervas <sandrajervas206@gmail.com>"
]
license = "None"
readme = "README.md"
packages = [
  { include = "compositeimage", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"

# Core dependencies
dvc = ">=3.61.0,<4.0.0"
dvclive = ">=3.48.3,<4.0.0"
matplotlib = ">=3.10.5,<4.0.0"
requests = ">=2.32.4,<3.0.0"
scikit-learn = ">=1.7.1,<2.0.0"
torchinfo = ">=1.8.0,<2.0.0"
timm = ">=1.0.19,<2.0.0"
omegaconf = ">=2.3.0,<3.0.0"

# APIs / Deployment
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
python-multipart = ">=0.0.20,<0.0.21"
flask = ">=3.1.1,<4.0.0"

# Torch with CUDA 12.1 (from custom index)
torch = { version = ">=2.5.1,<3.0.0", source = "pytorch-cu121" }
torchvision = { version = ">=0.20.1,<0.21.0", source = "pytorch-cu121" }
torchaudio = { version = ">=2.5.1,<3.0.0", source = "pytorch-cu121" }

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
